--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=placeholder
+
+# DATASOURCE (Spring Data JPA + MySQL)
+spring.datasource.url=jdbc:mysql://localhost:3306/mysqldb
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA / Hibernate Settings
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# Spring Web config
+server.port=8080
+
+# Spring Security
+spring.security.user.name=admin
+spring.security.user.password=uwu
+spring.security.user.roles=USER
