--- a/.github/workflows/doxygen.yaml
+++ b/.github/workflows/doxygen.yaml
@@ -3,7 +3,7 @@ name: Generate and Deploy Doxygen Docs
 on:
   push:
     branches:
-      - main  # O 'master' si usas master
+      - api
 
 jobs:
   build:
