--- a/.github/workflows/doxygen.yaml
+++ b/.github/workflows/doxygen.yaml
@@ -3,7 +3,7 @@ name: Generate and Deploy Doxygen Docs
 on:
   push:
     branches:
-      - api
+      - DOC_TEST
 
 jobs:
   build:
@@ -23,4 +23,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs
+          publish_dir: ./docs/html
+          destination_dir: html
