--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # Spring Web config
 server.port=8080
+server.tomcat.uri-encoding=UTF-8
 
 # Spring Security
 spring.security.user.name=admin
