--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,11 @@
             <version>0.12.6</version>
             <scope>runtime</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.antlr</groupId>
+            <artifactId>antlr4-runtime</artifactId>
+            <version>4.11.1</version>
+        </dependency>
     </dependencies>
 
     <build>
