--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,8 @@ server.tomcat.uri-encoding=UTF-8
 spring.security.user.name=admin
 spring.security.user.password=uwu
 spring.security.user.roles=USER
+
+#Authentication
+jwt.secret=
+jwt.provider=internal
+jwt.provider.issuer-uri=http://localhost:8081/realms/master
