DONT MERGE OR PULL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,7 @@ server.tomcat.uri-encoding=UTF-8
 spring.security.user.name=admin
 spring.security.user.password=uwu
 spring.security.user.roles=USER
+
+# Spring Operation Cache
+spring.cache.cache-names=evaluate,calculate,draw
+spring.cache.caffeine.spec=maximumSize=500,expireAfterWrite=10m
