--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,10 @@ spring.security.user.password=uwu
 spring.security.user.roles=USER
 
 #Authentication
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8081/realms/placeholder
 jwt.secret=
-jwt.provider=internal
-jwt.provider.issuer-uri=http://localhost:8081/realms/master
+jwt.expiration=-1
+
+#Exceptions and errors
+server.error.include-stacktrace=never
+server.error.include-exception=false
