--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,11 @@
             <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-authorization-server</artifactId>
+        </dependency>
+
         <!-- Thymeleaf for backend form render-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
