--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,8 +27,11 @@ spring.cache.caffeine.spec=maximumSize=500,expireAfterWrite=10m
 
 #Authentication
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8081/realms/placeholder
-jwt.secret=
-jwt.expiration=-1
+
+
+
+# Frontend
+squip.frontend.url=http://localhost:5175
 
 #Exceptions and errors
 server.error.include-stacktrace=never
