Configuration variables and class for auth client

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,8 +26,10 @@ spring.cache.cache-names=evaluate,calculate,draw
 spring.cache.caffeine.spec=maximumSize=500,expireAfterWrite=10m
 
 #Authentication
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8081/realms/placeholder
-
+oauth2.client.id=react-client
+oauth2.client.name=React Frontend App
+oauth2.client.scopes=openid, read
+oauth2.client.redirect-uri=http://localhost:8080/oauth2/callback
 
 
 # Frontend
