--- a/pom.xml
+++ b/pom.xml
@@ -175,6 +175,14 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.8.6</version> <!-- o superior -->
+        </dependency>
+
+
+
     </dependencies>
 
     <build>
