--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "install": "^0.13.0",
     "npm": "^11.4.1",
     "pkce-challenge": "^5.0.0",
