--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,10 @@
-FROM ubuntu:latest
-LABEL authors="rafji"
+# Build
+FROM node:20-alpine as builder
+WORKDIR /app
+COPY . .
+RUN npm install && npm run build
 
-ENTRYPOINT ["top", "-b"]
+# Prod
+FROM nginx:alpine
+COPY --from=builder /app/dist /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
