--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,16 +1,21 @@
 server {
     listen 80;
-    listen 443 ssl;
-    server_name tu-dominio.com;
-    return 301 https://$host$request_uri;
+    server_name localhost;
 
     location / {
-        proxy_pass http://frontend:80;
+        proxy_pass http://localhost:5173;  # Cambia este puerto si tu frontend usa otro
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
     }
 
     location /api/ {
-        proxy_pass http://backend:8080/;
+        proxy_pass http://localhost:8080;  # Backend Spring Boot
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
