--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,15 @@
 services:
   backend:
-    build: ./
+    build: .
     container_name: backend
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/mysqldb
-      SPRING_DATASOURCE_USERNAME: user
-      SPRING_DATASOURCE_PASSWORD: password
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: root
     depends_on:
       - db
+    ports:
+      - "8080:8080"
     networks:
       - internal
 
@@ -16,6 +18,10 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     container_name: frontend
+    ports:
+      - "5173:5173"
+    depends_on:
+      - backend
     networks:
       - internal
 
@@ -24,27 +30,11 @@ services:
     container_name: mysql
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: root
+      MYSQL_DATABASE: mysqldb
       MYSQL_USER: user
       MYSQL_PASSWORD: password
     volumes:
       - db_data:/var/lib/mysql
-    networks:
-      - internal
-
-  nginx:
-    image: nginx:alpine
-    container_name: nginx
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./nginx/fullchain.pem:/etc/nginx/certs/fullchain.pem:ro
-      - ./nginx/privkey.pem:/etc/nginx/certs/privkey.pem:ro
-    depends_on:
-      - frontend
-      - backend
     networks:
       - internal
 
