--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,3 +8,4 @@ RUN npm install && npm run build
 FROM nginx:alpine
 COPY --from=builder /app/dist /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
+EXPOSE 5173
