--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,21 +1,10 @@
 server {
-    listen 80;
-    server_name localhost;
+  listen 5173;
+  server_name localhost;
 
-    location / {
-        proxy_pass http://localhost:5173;  # Cambia este puerto si tu frontend usa otro
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-    }
-
-    location /api/ {
-        proxy_pass http://localhost:8080;  # Backend Spring Boot
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+  location / {
+    root /usr/share/nginx/html;
+    index index.html;
+    try_files $uri $uri/ /index.html;
+  }
 }
