--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # JPA / Hibernate Settings
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+spring.sql.init.mode=always
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.sql.init.schema-locations=classpath:schema.sql
