--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 spring.application.name=placeholder
 
 # DATASOURCE (Spring Data JPA + MySQL)
-spring.datasource.url=jdbc:mysql://localhost:3306/mysqldb
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/mysqldb}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:1234}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA / Hibernate Settings
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
-spring.sql.init.mode=always
+spring.sql.init.mode=never
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.sql.init.schema-locations=classpath:schema.sql
@@ -31,11 +31,10 @@ spring.cache.caffeine.spec=maximumSize=500,expireAfterWrite=10m
 oauth2.client.id=react-client
 oauth2.client.name=React Frontend App
 oauth2.client.scopes=openid, read
-oauth2.client.redirect-uri=http://localhost:5173/oauth2/callback
-
+oauth2.client.redirect-uri=${FRONTEND_URL}/oauth2/callback
 
 # Frontend
-squip.frontend.url=http://localhost:5173
+squip.frontend.url=${FRONTEND_URL:http://localhost:5173}
 
 #Exceptions and errors
 server.error.include-stacktrace=never
