--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/mysqldb
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: root
-      FRONTEND_URL: http://frontend:80  # Frontend exposed on port 80
+      FRONTEND_URL: http://localhost:80
     depends_on:
       - db  # Wait for DB container to start (no healthcheck)
     ports:
@@ -24,16 +24,18 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+      args:
+        # Build react+vite frontend using the specified URL for backend and frontend
+        VITE_BACKEND_URL: http://localhost:8080
+        VITE_FRONTEND_URL: http://localhost:80
     container_name: frontend
-    environment:
-      VITE_BACKEND_URL: http://backend:8080
     ports:
       - "80:80" #for PROD (Http only)
     depends_on:
       - backend  # Wait for backend container to start
     networks:
-      - frontend_net  # Frontend network exposed to outside
-      - internal  # Also connected to internal network to reach backend
+      - internal  # Agregado para que frontend pueda llamar al backend por nombre de servicio
+      - frontend_net  # Also connected to frontend_net to expose frontend externally
     restart: unless-stopped
     logging:
       driver: json-file
