--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # JPA / Hibernate Settings
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
-spring.sql.init.mode=never
+spring.sql.init.mode=always
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.sql.init.schema-locations=classpath:schema.sql
@@ -31,10 +31,7 @@ spring.cache.caffeine.spec=maximumSize=500,expireAfterWrite=10m
 oauth2.client.id=react-client
 oauth2.client.name=React Frontend App
 oauth2.client.scopes=openid, read
-oauth2.client.redirect-uri=${FRONTEND_URL}/oauth2/callback
-
-# Frontend
-squip.frontend.url=${FRONTEND_URL:http://localhost:5173}
+oauth2.client.redirect-uri=${FRONTEND_URL:localhost:5173}/oauth2/callback
 
 #Exceptions and errors
 server.error.include-stacktrace=never
