--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/mysqldb
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: root
-      FRONTEND_URL: http://localhost:80
+      FRONTEND_URL: http://localhost
     depends_on:
       - db  # Wait for DB container to start (no healthcheck)
     ports:
@@ -24,11 +24,10 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
-      args:
-        # Build react+vite frontend using the specified URL for backend and frontend
-        VITE_BACKEND_URL: http://localhost:8080
-        VITE_FRONTEND_URL: http://localhost:80
     container_name: frontend
+    environment:
+      VITE_BACKEND_URL: http://localhost:8080
+      VITE_FRONTEND_URL: http://localhost
     ports:
       - "80:80" #for PROD (Http only)
     depends_on:
