--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,7 +31,7 @@ spring.cache.caffeine.spec=maximumSize=500,expireAfterWrite=10m
 oauth2.client.id=react-client
 oauth2.client.name=React Frontend App
 oauth2.client.scopes=openid, read
-oauth2.client.redirect-uri=${FRONTEND_URL:localhost:5173}/oauth2/callback
+oauth2.client.redirect-uri=${FRONTEND_URL:http://localhost:5173}/oauth2/callback
 
 #Exceptions and errors
 server.error.include-stacktrace=never
