--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,7 +48,7 @@ services:
     container_name: mysql
     environment:
       # Credentials and DB name for MySQL (development generic values)
-      MYSQL_ROOT_PASSWORD: root
+      MYSQL_ROOT_PASSWORD: 1234
       MYSQL_DATABASE: mysqldb
       MYSQL_USER: user
       MYSQL_PASSWORD: password
