Calculator Protected And A Lot of Bugs Fixed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=placeholder
+spring.application.name=alephzero
 
 # DATASOURCE (Spring Data JPA + MySQL)
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/mysqldb}
