The backend now always redirect to frontend/ when successful log in

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,6 +33,8 @@ oauth2.client.name=React Frontend App
 oauth2.client.scopes=openid, read
 oauth2.client.redirect-uri=${FRONTEND_URL:http://localhost:5173}/oauth2/callback
 
+app.frontend.url=${FRONTEND_URL:http://localhost:5173}
+
 #Exceptions and errors
 server.error.include-stacktrace=never
 server.error.include-exception=false
