--- a/.github/workflows/doxygen.yaml
+++ b/.github/workflows/doxygen.yaml
@@ -1,27 +1,27 @@
-name: Generate and Deploy Doxygen Docs
-
-on:
-  push:
-    branches:
-      - api
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Install Doxygen
-        run: sudo apt-get update && sudo apt-get install -y doxygen graphviz
-
-      - name: Generate Documentation
-        run: doxygen Doxyfile
-
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs/html   # Cambié aquí de ./docs a ./docs/html
-
+#name: Generate and Deploy Doxygen Docs
+#
+#on:
+#  push:
+#    branches:
+#      - api
+#
+#jobs:
+#  build:
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      - name: Checkout repository
+#        uses: actions/checkout@v4
+#
+#      - name: Install Doxygen
+#        run: sudo apt-get update && sudo apt-get install -y doxygen graphviz
+#
+#      - name: Generate Documentation
+#        run: doxygen Doxyfile
+#
+#      - name: Deploy to GitHub Pages
+#        uses: peaceiris/actions-gh-pages@v4
+#        with:
+#          github_token: ${{ secrets.GITHUB_TOKEN }}
+#          publish_dir: ./docs/html   # Cambié aquí de ./docs a ./docs/html
+#
