--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   backend:
     build: .
+    image: sinbelisk/alephzero-backend:1.0.0
     container_name: backend
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/mysqldb
@@ -25,6 +26,7 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+    image: sinbelisk/alephzero-frontend:1.0.0
     container_name: frontend
     environment:
       VITE_BACKEND_URL: http://localhost:8080
